--- a/Phonebook-web/pom.xml
+++ b/Phonebook-web/pom.xml
@@ -13,6 +13,15 @@
 
    <name>Phonebook Web module</name>
 
+	<repositories>
+		<repository>
+			<id>prime-repo</id>
+			<name>PrimeFaces Maven Repository</name>
+			<url>http://repository.primefaces.org</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>
+
    <dependencies>
 
       <!-- Dependency on the EJB module so we can use it's services if needed -->
@@ -55,6 +64,11 @@
          <scope>provided</scope>
       </dependency>
 
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>3.4.2</version>
+		</dependency>
    </dependencies>
 
    <build>
