--- a/Phonebook-web/pom.xml
+++ b/Phonebook-web/pom.xml
@@ -183,6 +183,12 @@
 			<artifactId>weld-core</artifactId>
 			<version>2.0.0.Alpha3</version>
 		</dependency>
+		
+	    <dependency>
+	        <groupId>javax.servlet</groupId>
+	        <artifactId>jstl</artifactId>
+	        <version>1.2</version>
+	    </dependency>
 	</dependencies>
 
 	<build>
